eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "ab9b35b63da5d41a8b4a27cb3d513cb4-1978624757.ap-south-1.elb.amazonaws.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: simple-bank-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - ab9b35b63da5d41a8b4a27cb3d513cb4-1978624757.ap-south-1.elb.amazonaws.com
      secretName: simple-bank-api-cert
